style - make homepage grid widgets and taxonomy list contnts have blue links because they have grey bkgd in project theme

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ h3 a
 }
 #TEXT-BLUE-MEDIUM,
 .post a,
+.homepage-grid .widget-contents a,
+.taxonomy-list a,
 .text-blue-medium {
 	color: #417eb9;	
 }
